backend/k8s/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fasttrack-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: fasttrack-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
