backend/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasttrack-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: ""
spec:
  tls: []
  rules:
    - host: fast-stg.toper.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fasttrack-api
                port:
                  number: 80
